--- a/random-line-from.yml
+++ b/random-line-from.yml
@@ -1,6 +1,6 @@
 class RandomLineFrom < Dynasnip
   def handle(snip_name)
-    snip = Vanilla.snip!(snip_name)
+    snip = app.soup[snip_name]
     lines = snip.content.split("\n")
     lines[rand(lines.length)]
   end
