--- a/test-git-push.yml
+++ b/test-git-push.yml
@@ -1,5 +1,5 @@
 Lets see if this appears on my site.
---- # Snip attributes
+--- # Soup attributes
 :name: test-git-push
 :author: james
 :render_as: Markdown
