A bit more content on the Straight Path

--- a/soup/The Straight Path.yml
+++ b/soup/The Straight Path.yml
@@ -27,7 +27,7 @@ And don't forget that this is reality, and you don't live like a monk. You have 
 
 So any kind of *absolutism* about following your diet isn't useful - worse, it's counter productive, alienating yourself from your friends and fellow party goers with this talk of a diet that they don't understand or care about.
 
-No, better to go for option 2.
+No, better to go for Option 2.
 
 
 The straight path
@@ -40,7 +40,16 @@ You have a goal, and there's a clear, straight-line path which you are confident
 You have two choices:
 
   1. Get onto that path as soon as you can, and then ardently stay on the path, each step in the same direction
-  2. Try to keep an eye on the path, but still move forwards through the swamp, trying to slowly get closer to it.--- # Soup attributes
+  2. Try to keep an eye on the path, but still move forwards through the swamp, trying to slowly get closer to it.
+
+My thesis is that the only sensible choice is Option 1.
+
+Option 2 is harder; each step brings a choice - expend effort trying to move closer to the ideal, or be [pragmatic][] and scramble foward a little bit, hopefully not moving too much further away from the path.
+
+
+[pragmatic]: http://programmingtour.blogspot.com/2009/10/on-term-pragmatic.html
+
+--- # Soup attributes
 :render_as: Markdown
 :updated_at: 2009-09-25 17:02:10 +01:00
 :name: The Straight Path
