--- a/soup/system.yml
+++ b/soup/system.yml
@@ -7,7 +7,8 @@ You're in the system snip now. You probably want to {edit_link system,edit} it t
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
     <meta name="description" content="A blog by James Adam, of lazyatom.com fame." />
     <title>interblah.net - {current_snip name}</title>
-    <script type="text/javascript" src="/public/javascripts/jquery-1.2.6.js"></script>
+    <script type="text/javascript" src="/public/javascripts/jquery.js"></script>
+    <script type="text/javascript" src="/public/javascripts/jquery.autogrow-textarea.js"></script>
     <script type="text/javascript" src="/public/javascripts/vanilla.js"></script>
     <link rel="stylesheet" type="text/css" media="screen"  href="/system/css.css" />
     <link rel="stylesheet" type="text/css" media="screen"  href="/system/syntax_styles.css" />
