--- a/soup/test.yml
+++ b/soup/test.yml
@@ -23,6 +23,8 @@ The source for that was
 
 {pre markdown_example}
 
+We can even render dynasnips asynchronously: {test_ajax}
+
 How about some {link_to debug} information: {debug}
 
 What about a missing snip? Lets try to include one: {monkey}
