Fix a bunch of missing or broken timestamps.

--- a/soup/already-we-have-vanilla-goodness-comment-4.yml
+++ b/soup/already-we-have-vanilla-goodness-comment-4.yml
@@ -1,8 +1,8 @@
 ^^^ Woo!  First junk comment!--- # Soup attributes
-:commenting_on: already-we-have-vanilla-goodness
-:website: http://interblah.net
-:updated_at: 
 :email: ""
-:name: already-we-have-vanilla-goodness-comment-4
 :created_at: 2008-06-04 00:43:13 +01:00
+:updated_at: 2008-06-04 00:43:13 +01:00
 :author: James Adam
+:commenting_on: already-we-have-vanilla-goodness
+:name: already-we-have-vanilla-goodness-comment-4
+:website: http://interblah.net
