--- a/soup/blank.yml
+++ b/soup/blank.yml
@@ -1,4 +1,4 @@
 --- # Soup attributes
-:updated_at: 
+:created_at: 2009-10-16 15:27:53.551286 +01:00
+:updated_at: 2009-10-16 15:27:53.551286 +01:00
 :name: blank
-:created_at: 
