--- a/soup/bold.yml
+++ b/soup/bold.yml
@@ -1,6 +1,6 @@
 Snip2 in da house!
 --- # Soup attributes
+:created_at: 2009-10-16 15:27:53.552576 +01:00
+:updated_at: 2009-10-16 15:27:53.552576 +01:00
 :render_as: Bold
-:updated_at: 
 :name: bold
-:created_at: 
