--- a/soup/index.yml
+++ b/soup/index.yml
@@ -1,5 +1,5 @@
 Index--- # Soup attributes
+:created_at: 2009-10-16 15:27:53.556950 +01:00
+:updated_at: 2009-10-16 15:27:53.556950 +01:00
 :render_as: Ruby
-:updated_at: 
 :name: index
-:created_at: 
