--- a/soup/pre.yml
+++ b/soup/pre.yml
@@ -1,8 +1,4 @@
 ShowContentInPreTag--- # Soup attributes
-:render_as: Ruby
-:updated_at: 
-:name: pre
-:created_at: 
 :usage: |-
   Wraps the contents of the given snip in &lt;pre&gt; tags, e.g.
   
@@ -11,3 +7,7 @@ ShowContentInPreTag--- # Soup attributes
       You can specify a part to render in pre tags, should you wish:
   
         &#123;pre my_snip,specific_part&#125;
+:created_at: 2009-10-16 15:27:53.576674 +01:00
+:updated_at: 2009-10-16 15:27:53.576674 +01:00
+:render_as: Ruby
+:name: pre
