--- a/soup/raw.yml
+++ b/soup/raw.yml
@@ -1,8 +1,4 @@
 ShowRawContent--- # Soup attributes
-:render_as: Ruby
-:updated_at: 
-:name: raw
-:created_at: 
 :usage: |-
   Displays the raw contents of a snip in &lt;pre&gt; tags, e.g.
   
@@ -11,3 +7,7 @@ ShowRawContent--- # Soup attributes
       You can specify a part to show, should you wish:
   
         &#123;raw my_snip,specific_part&#125;
+:created_at: 2009-10-16 15:27:53.578074 +01:00
+:updated_at: 2009-10-16 15:27:53.578074 +01:00
+:render_as: Ruby
+:name: raw
