--- a/soup/test-commenting-comment-5.yml
+++ b/soup/test-commenting-comment-5.yml
@@ -1,13 +1,13 @@
 GReat site! buy viagra!--- # Soup attributes
-:defensio_signature: 5e8e053ea1q1ayqze1rpo2
-:commenting_on: test-commenting
-:website: http://superviagra.com
-:user_ip: 86.1.109.154
-:updated_at: 
 :email: asdgasd@asdfasdga.com
-:defensio_message: 
-:name: test-commenting-comment-5
 :created_at: 2008-08-28 14:55:36 +01:00
 :spam: f
-:author: asfasdf
+:updated_at: 2008-08-28 14:55:36 +01:00
 :spamminess: "0"
+:author: asfasdf
+:commenting_on: test-commenting
+:defensio_signature: 5e8e053ea1q1ayqze1rpo2
+:name: test-commenting-comment-5
+:user_ip: 86.1.109.154
+:defensio_message: 
+:website: http://superviagra.com
