--- a/soup/test-commenting-comment-7.yml
+++ b/soup/test-commenting-comment-7.yml
@@ -1,13 +1,13 @@
 Your little soldier too tired to play? go to www.pillspillspills.com for VIAGRA!--- # Soup attributes
-:defensio_signature: b4504eb157avcloaioy8mo
-:commenting_on: test-commenting
-:website: ""
-:user_ip: 155.198.40.117
-:updated_at: 
+:defensio_status: success
 :email: ""
-:name: test-commenting-comment-7
 :created_at: 2008-08-28 15:52:50 +01:00
 :spam: f
-:author: Lucky_Jim
-:defensio_status: success
+:updated_at: 2008-08-28 15:52:50 +01:00
 :spamminess: "0"
+:author: Lucky_Jim
+:commenting_on: test-commenting
+:defensio_signature: b4504eb157avcloaioy8mo
+:name: test-commenting-comment-7
+:user_ip: 155.198.40.117
+:website: ""
