--- a/soup/already-we-have-vanilla-goodness-comment-2.yml
+++ b/soup/already-we-have-vanilla-goodness-comment-2.yml
@@ -1,8 +1,8 @@
 And here's another test comment, posted from the form!--- # Soup attributes
-:commenting_on: already-we-have-vanilla-goodness
-:website: http://interblah.net
-:updated_at: 
 :email: ""
-:name: already-we-have-vanilla-goodness-comment-2
 :created_at: 2008-06-03 22:37:27 +01:00
+:updated_at: 2008-06-03 22:37:27 +01:00
 :author: James Adam
+:commenting_on: already-we-have-vanilla-goodness
+:name: already-we-have-vanilla-goodness-comment-2
+:website: http://interblah.net
