--- a/soup/already-we-have-vanilla-goodness-comment-3.yml
+++ b/soup/already-we-have-vanilla-goodness-comment-3.yml
@@ -1,9 +1,9 @@
 f
 --- # Soup attributes
-:commenting_on: already-we-have-vanilla-goodness
-:website: ""
-:updated_at: 
 :email: ""
-:name: already-we-have-vanilla-goodness-comment-3
 :created_at: 2008-06-03 23:53:22 +01:00
+:updated_at: 2008-06-03 23:53:22 +01:00
 :author: f
+:commenting_on: already-we-have-vanilla-goodness
+:name: already-we-have-vanilla-goodness-comment-3
+:website: ""
