--- a/soup/blog.yml
+++ b/soup/blog.yml
@@ -1,7 +1,7 @@
 Here are the 10 latest blog entries. Enjoy!
 
 {kind blog}--- # Soup attributes
-:render_as: Markdown
+:created_at: 2009-10-16 15:27:53.551903 +01:00
 :updated_at: 2008-06-02 00:26:00 +01:00
+:render_as: Markdown
 :name: blog
-:created_at: 
