--- a/soup/comments-are-alive-comment-1.yml
+++ b/soup/comments-are-alive-comment-1.yml
@@ -1,8 +1,8 @@
 --- # Soup attributes
-:commenting_on: comments-are-alive
-:website: ""
-:updated_at: 
 :email: ""
-:name: comments-are-alive-comment-1
 :created_at: 2008-06-04 01:11:07 +01:00
+:updated_at: 2008-06-04 01:11:07 +01:00
 :author: ""
+:commenting_on: comments-are-alive
+:name: comments-are-alive-comment-1
+:website: ""
