--- a/soup/comments-are-alive-comment-2.yml
+++ b/soup/comments-are-alive-comment-2.yml
@@ -1,8 +1,8 @@
 the textarea may be small, but the joy is great!--- # Soup attributes
-:commenting_on: comments-are-alive
-:website: http://www.langreiter.com
-:updated_at: 
 :email: chris@langreiter.com
-:name: comments-are-alive-comment-2
 :created_at: 2008-06-05 00:42:58 +01:00
+:updated_at: 2008-06-05 00:42:58 +01:00
 :author: ch
+:commenting_on: comments-are-alive
+:name: comments-are-alive-comment-2
+:website: http://www.langreiter.com
