--- a/soup/debug.yml
+++ b/soup/debug.yml
@@ -1,5 +1,5 @@
 Debug--- # Soup attributes
+:created_at: 2009-10-16 15:27:53.554677 +01:00
+:updated_at: 2009-10-16 15:27:53.554677 +01:00
 :render_as: Ruby
-:updated_at: 
 :name: debug
-:created_at: 
