--- a/soup/defensio-to-the-rescue-comment-1.yml
+++ b/soup/defensio-to-the-rescue-comment-1.yml
@@ -1,10 +1,10 @@
 Turns out Defensio is letting though a LOT of spam here, although that could be because I'm not using it properly, just hacking into it's API a little bit.
 
 Anyway - there's a new spam-block feature, that you may have seen on http://po-ru.com here now too.--- # Soup attributes
-:commenting_on: defensio-to-the-rescue
-:website: http://interblah.net
-:updated_at: 
 :email: james@lazyatom.com
-:name: defensio-to-the-rescue-comment-1
 :created_at: 2008-08-22 14:57:34 +01:00
+:updated_at: 2008-08-22 14:57:34 +01:00
 :author: James Adam
+:commenting_on: defensio-to-the-rescue
+:name: defensio-to-the-rescue-comment-1
+:website: http://interblah.net
