--- a/soup/defensio-to-the-rescue-comment-3.yml
+++ b/soup/defensio-to-the-rescue-comment-3.yml
@@ -1,15 +1,15 @@
 Thanks Carl,
 
 I've tweaked the comment mechanism to store some more information about the response from Defensio - hopefully that should illuminate what's going on.--- # Soup attributes
-:defensio_signature: 685527645avcpjmwjfsz3e
-:commenting_on: defensio-to-the-rescue
-:website: http://interblah.net
-:user_ip: 127.0.0.1
-:updated_at: 
+:defensio_status: success
 :email: james@lazyatom.com
-:name: defensio-to-the-rescue-comment-3
 :created_at: 2008-08-28 15:09:51 +01:00
 :spam: f
-:author: James Adam
-:defensio_status: success
+:updated_at: 2008-08-28 15:09:51 +01:00
 :spamminess: "0.99"
+:author: James Adam
+:commenting_on: defensio-to-the-rescue
+:defensio_signature: 685527645avcpjmwjfsz3e
+:name: defensio-to-the-rescue-comment-3
+:user_ip: 127.0.0.1
+:website: http://interblah.net
