--- a/soup/edit_link.yml
+++ b/soup/edit_link.yml
@@ -1,8 +1,4 @@
 EditLink--- # Soup attributes
-:render_as: Ruby
-:updated_at: 
-:name: edit_link
-:created_at: 
 :usage: |-
   You can use the edit_link snip to insert links for editing other snips. For example: 
   
@@ -13,3 +9,7 @@ EditLink--- # Soup attributes
   You can also give a custom piece of text for the link, like this:
   
     &#123;edit_link blah,link-name&#125;
+:created_at: 2009-10-16 15:27:53.555219 +01:00
+:updated_at: 2009-10-16 15:27:53.555219 +01:00
+:render_as: Ruby
+:name: edit_link
