--- a/soup/feed.yml
+++ b/soup/feed.yml
@@ -1,5 +1,5 @@
 {kind blog,10,xml}--- # Soup attributes
-:render_as: ""
-:updated_at: 
-:name: feed
 :created_at: 2008-05-08 21:27:05 +01:00
+:updated_at: 2008-05-08 21:27:05 +01:00
+:render_as: ""
+:name: feed
