--- a/soup/leaving-reevoo-comment-1.yml
+++ b/soup/leaving-reevoo-comment-1.yml
@@ -1,13 +1,13 @@
 Good luck with whatever your doing James, I can testify that working for yourself is the only way to go!--- # Soup attributes
-:defensio_signature: 729b858cf9tdjqymdrghey
-:commenting_on: leaving-reevoo
-:website: http://tekin.co.uk
-:user_ip: 81.129.38.225
-:updated_at: 
+:defensio_status: success
 :email: tekin@tekin.co.uk
-:name: leaving-reevoo-comment-1
 :created_at: 2008-11-26 19:14:17 +00:00
 :spam: f
-:author: Tekin
-:defensio_status: success
+:updated_at: 2008-11-26 19:14:17 +00:00
 :spamminess: "0.05"
+:author: Tekin
+:commenting_on: leaving-reevoo
+:defensio_signature: 729b858cf9tdjqymdrghey
+:name: leaving-reevoo-comment-1
+:user_ip: 81.129.38.225
+:website: http://tekin.co.uk
