--- a/soup/link_to.yml
+++ b/soup/link_to.yml
@@ -1,12 +1,12 @@
 LinkTo
 --- # Soup attributes
-:render_as: Ruby
-:updated_at: 2009-05-07 02:02:29 +01:00
-:name: link_to
-:created_at: 
 :usage: |-
   The link_to dyna lets you create links between snips: 
   
     &#123;link_to blah&#125; 
   
   would insert a link to the blah snip.
+:created_at: 2009-10-16 15:27:53.561281 +01:00
+:updated_at: 2009-05-07 02:02:29 +01:00
+:render_as: Ruby
+:name: link_to
