--- a/soup/link_to_current_snip.yml
+++ b/soup/link_to_current_snip.yml
@@ -1,8 +1,8 @@
 LinkToCurrentSnip--- # Soup attributes
-:render_as: Ruby
-:updated_at: 
-:name: link_to_current_snip
-:created_at: 
 :usage: |-
   Renders a link to the current snip, or the snip currently being edited 
       (if we're currently editing)
+:created_at: 2009-10-16 15:27:53.561938 +01:00
+:updated_at: 2009-10-16 15:27:53.561938 +01:00
+:render_as: Ruby
+:name: link_to_current_snip
