--- a/soup/login.yml
+++ b/soup/login.yml
@@ -1,6 +1,6 @@
 Login--- # Soup attributes
-:render_as: Ruby
+:created_at: 2009-10-16 15:27:53.565753 +01:00
+:updated_at: 2009-10-16 15:27:53.565753 +01:00
 :template: "    <form action='/login' method='post'>\n    <label>Name: <input type=\"text\" name=\"name\"></input></label>\n    <label>Password: <input type=\"password\" name=\"password\"></input></label>\n    <button>login</button>\n    </form>\n"
-:updated_at: 
+:render_as: Ruby
 :name: login
-:created_at: 
