--- a/soup/markdown_example.yml
+++ b/soup/markdown_example.yml
@@ -9,7 +9,7 @@ so, how are you?
 
 what the *hell* are _looking_ at, [beyotch](http://example.com)?
 --- # Soup attributes
-:render_as: Markdown
+:created_at: 2009-10-16 15:27:53.569102 +01:00
 :updated_at: 2008-06-06 10:03:49 +01:00
+:render_as: Markdown
 :name: markdown_example
-:created_at: 
