--- a/soup/mashed-2008-comment-1.yml
+++ b/soup/mashed-2008-comment-1.yml
@@ -1,8 +1,8 @@
 Nice video.--- # Soup attributes
-:commenting_on: mashed-2008
-:website: http://www.theatons.com/
-:updated_at: 
 :email: au@theatons.com
-:name: mashed-2008-comment-1
 :created_at: 2008-06-30 14:06:48 +01:00
+:updated_at: 2008-06-30 14:06:48 +01:00
 :author: "Adult \xC3\x9Chler"
+:commenting_on: mashed-2008
+:name: mashed-2008-comment-1
+:website: http://www.theatons.com/
