--- a/soup/mashed-2008-comment-2.yml
+++ b/soup/mashed-2008-comment-2.yml
@@ -1,8 +1,8 @@
 This is awesome! Respect! :)--- # Soup attributes
-:commenting_on: mashed-2008
-:website: http://www.danielbarradas.com
-:updated_at: 
 :email: dbar@fc.ul.pt
-:name: mashed-2008-comment-2
 :created_at: 2008-07-03 22:11:28 +01:00
+:updated_at: 2008-07-03 22:11:28 +01:00
 :author: Daniel Barradas
+:commenting_on: mashed-2008
+:name: mashed-2008-comment-2
+:website: http://www.danielbarradas.com
