--- a/soup/mashed-2008-comment-4.yml
+++ b/soup/mashed-2008-comment-4.yml
@@ -1,8 +1,8 @@
 Utter genius - respect for disassembling the Dylan swf, cunning!--- # Soup attributes
-:commenting_on: mashed-2008
-:website: http://andyskipper.com
-:updated_at: 
 :email: andy@andyskipper.com
-:name: mashed-2008-comment-4
 :created_at: 2008-07-09 12:23:29 +01:00
+:updated_at: 2008-07-09 12:23:29 +01:00
 :author: Andy Skipper
+:commenting_on: mashed-2008
+:name: mashed-2008-comment-4
+:website: http://andyskipper.com
