--- a/soup/more-vanilla-tweaks-comment-1.yml
+++ b/soup/more-vanilla-tweaks-comment-1.yml
@@ -1,8 +1,8 @@
 Will Touchgraph work with vanilla-rb, such as at langreiter.com?--- # Soup attributes
-:commenting_on: more-vanilla-tweaks
-:website: ""
-:updated_at: 
 :email: jhotchkiss@tnc.org
-:name: more-vanilla-tweaks-comment-1
 :created_at: 2008-06-19 16:44:23 +01:00
+:updated_at: 2008-06-19 16:44:23 +01:00
 :author: Jack
+:commenting_on: more-vanilla-tweaks
+:name: more-vanilla-tweaks-comment-1
+:website: ""
