--- a/soup/new.yml
+++ b/soup/new.yml
@@ -1,5 +1,5 @@
 NewSnip--- # Soup attributes
+:created_at: 2009-10-16 15:27:53.571011 +01:00
+:updated_at: 2009-10-16 15:27:53.571011 +01:00
 :render_as: Ruby
-:updated_at: 
 :name: new
-:created_at: 
