--- a/soup/notes.yml
+++ b/soup/notes.yml
@@ -1,8 +1,8 @@
 Notes--- # Soup attributes
+:created_at: 2009-10-16 15:27:53.575064 +01:00
 :main_template: <dl>[notes]</dl>
+:updated_at: 2009-10-16 15:27:53.575064 +01:00
 :render_as: Ruby
-:note_template: <dt>[link]</dt><dd>[note]</dd>
-:updated_at: 
 :name: notes
+:note_template: <dt>[link]</dt><dd>[note]</dd>
 :next_note_id: "1"
-:created_at: 
