--- a/soup/syntax-highlighting-demo-comment-2.yml
+++ b/soup/syntax-highlighting-demo-comment-2.yml
@@ -6,16 +6,16 @@ class Test
   end
 end
 {/code}--- # Soup attributes
-:defensio_signature: 
-:commenting_on: syntax-highlighting-demo
-:website: ""
-:user_ip: 88.229.30.62
-:updated_at: 
+:defensio_status: fail
 :email: ""
-:defensio_message: "The following fields are missing but required: comment-author"
-:name: syntax-highlighting-demo-comment-2
 :created_at: 2008-09-19 03:17:28 +01:00
 :spam: 
-:author: ""
-:defensio_status: fail
+:updated_at: 2008-09-19 03:17:28 +01:00
 :spamminess: 
+:author: ""
+:commenting_on: syntax-highlighting-demo
+:defensio_signature: 
+:name: syntax-highlighting-demo-comment-2
+:user_ip: 88.229.30.62
+:defensio_message: "The following fields are missing but required: comment-author"
+:website: ""
