--- a/soup/system.yml
+++ b/soup/system.yml
@@ -1,121 +1,4 @@
 You're in the system snip now. You probably want to {edit_link system,edit} it though.--- # Soup attributes
-:main_template: |
-  <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
-  <html lang="en">
-  <head>
-    <meta name="verify-v1" content="MVZrdn6KVndrZX3SHFWGjvBJS2ADgRkzlMqWI1cYJgw=" />
-    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <meta name="description" content="A blog by James Adam, of lazyatom.com fame." />
-    <title>interblah.net - {current_snip name}</title>
-    <script type="text/javascript" src="/public/javascripts/jquery.js"></script>
-    <script type="text/javascript" src="/public/javascripts/jquery.autogrow-textarea.js"></script>
-    <script type="text/javascript" src="/public/javascripts/vanilla.js"></script>
-    <link rel="stylesheet" type="text/css" media="screen"  href="/system/css.css" />
-    <link rel="stylesheet" type="text/css" media="screen"  href="/system/syntax_styles.css" />
-    <link href="/feed.xml" rel="alternate" title="interblah.net - blog" type="application/atom+xml" />
-  </head>
-  <body>
-    <div id="content">
-      <div id="header">
-        <h2><a href="/">interblah.net</a> &raquo; conflagration over configuration</h2>
-      </div>
-      <div id="controls">
-        <strong><a href="/">home</a></strong>, 
-        <strong><%= link_to 'index' %></strong>,
-        <%= new_link %> ::
-        <strong>{link_to_current_snip}</strong> &rarr; 
-        {edit_link} | 
-        <a href="/delete?snip_to_delete={current_snip name}" onclick="javascript:if(confirm('Are you REALLY sure?')) { return true; } else { return false; };">Delete</a>
-      </div>
-      {current_snip}
-      <div id="footer">
-        <a href="/on-commenting">Comment Policy</a>
-      </div>
-    </div>
-  
-  <script type="text/javascript">
-  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-  </script>
-  <script type="text/javascript">
-  var pageTracker = _gat._getTracker("UA-573082-1");
-  pageTracker._initData();
-  pageTracker._trackPageview();
-  </script>
-  
-  </body>
-  </html>
-
-:syntax_styles: |-
-  pre.code {
-  background-color:#0D151E;
-  color:#FFFFFF;
-  font-size:1.1em;
-  margin:4px 0px;
-  overflow:auto;
-  padding:10px;
-  }
-  pre.code.ruby .normal {
-  }
-  pre.code.ruby .comment {
-  color:#428BDD;
-  font-style:italic;
-  }
-  pre.code.ruby .keyword {
-  color:#F8BB00;
-  }
-  pre.code.ruby .method {
-  color:#007777;
-  }
-  pre.code.ruby .class {
-  color:#FFFFFF;
-  }
-  pre.code.ruby .module {
-  color:#005500;
-  }
-  pre.code.ruby .punct {
-  color:#FFFFFF;
-  }
-  pre.code.ruby .symbol {
-  color:#B53B3C;
-  }
-  pre.code.ruby .string {
-  color:#1DC116;
-  }
-  pre.code.ruby .char {
-  color:#FF0077;
-  }
-  pre.code.ruby .ident {
-  color:#FFFFFF;
-  }
-  pre.code.ruby .constant {
-  color:#8AA6C1;
-  }
-  pre.code.ruby .regex {
-  color:#CA4344;
-  }
-  pre.code.ruby .number {
-  color:#EDDD3D;
-  }
-  pre.code.ruby .attribute {
-  color:#55BBBB;
-  }
-  pre.code.ruby .global {
-  color:#77FFBB;
-  }
-  pre.code.ruby .expr {
-  color:#222277;
-  }
-  pre.code.ruby .escape {
-  color:#1C6A21;
-  }
-:updated_at: 2009-08-20 10:39:16 +01:00
-:four_oh_four: |
-  <h1>DANG IT!</h1>
-  <p>That is too bad. DANG that smarts bad. I couldn't load your request. Was it malformed?</p>
-  <p>Maybe you should go <a href="/">home</a>.</p>
-
-:name: system
 :css: |-
   body {
     font-family: Helvetica;
@@ -269,4 +152,121 @@ You're in the system snip now. You probably want to {edit_link system,edit} it t
     margin-top: 2em;
     width: 50%;
   }
-:created_at: 
+:created_at: 2009-10-16 15:27:53.579529 +01:00
+:main_template: |
+  <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
+  <html lang="en">
+  <head>
+    <meta name="verify-v1" content="MVZrdn6KVndrZX3SHFWGjvBJS2ADgRkzlMqWI1cYJgw=" />
+    <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+    <meta name="description" content="A blog by James Adam, of lazyatom.com fame." />
+    <title>interblah.net - {current_snip name}</title>
+    <script type="text/javascript" src="/public/javascripts/jquery.js"></script>
+    <script type="text/javascript" src="/public/javascripts/jquery.autogrow-textarea.js"></script>
+    <script type="text/javascript" src="/public/javascripts/vanilla.js"></script>
+    <link rel="stylesheet" type="text/css" media="screen"  href="/system/css.css" />
+    <link rel="stylesheet" type="text/css" media="screen"  href="/system/syntax_styles.css" />
+    <link href="/feed.xml" rel="alternate" title="interblah.net - blog" type="application/atom+xml" />
+  </head>
+  <body>
+    <div id="content">
+      <div id="header">
+        <h2><a href="/">interblah.net</a> &raquo; conflagration over configuration</h2>
+      </div>
+      <div id="controls">
+        <strong><a href="/">home</a></strong>, 
+        <strong><%= link_to 'index' %></strong>,
+        <%= new_link %> ::
+        <strong>{link_to_current_snip}</strong> &rarr; 
+        {edit_link} | 
+        <a href="/delete?snip_to_delete={current_snip name}" onclick="javascript:if(confirm('Are you REALLY sure?')) { return true; } else { return false; };">Delete</a>
+      </div>
+      {current_snip}
+      <div id="footer">
+        <a href="/on-commenting">Comment Policy</a>
+      </div>
+    </div>
+  
+  <script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type="text/javascript">
+  var pageTracker = _gat._getTracker("UA-573082-1");
+  pageTracker._initData();
+  pageTracker._trackPageview();
+  </script>
+  
+  </body>
+  </html>
+
+:updated_at: 2009-08-20 10:39:16 +01:00
+:syntax_styles: |-
+  pre.code {
+  background-color:#0D151E;
+  color:#FFFFFF;
+  font-size:1.1em;
+  margin:4px 0px;
+  overflow:auto;
+  padding:10px;
+  }
+  pre.code.ruby .normal {
+  }
+  pre.code.ruby .comment {
+  color:#428BDD;
+  font-style:italic;
+  }
+  pre.code.ruby .keyword {
+  color:#F8BB00;
+  }
+  pre.code.ruby .method {
+  color:#007777;
+  }
+  pre.code.ruby .class {
+  color:#FFFFFF;
+  }
+  pre.code.ruby .module {
+  color:#005500;
+  }
+  pre.code.ruby .punct {
+  color:#FFFFFF;
+  }
+  pre.code.ruby .symbol {
+  color:#B53B3C;
+  }
+  pre.code.ruby .string {
+  color:#1DC116;
+  }
+  pre.code.ruby .char {
+  color:#FF0077;
+  }
+  pre.code.ruby .ident {
+  color:#FFFFFF;
+  }
+  pre.code.ruby .constant {
+  color:#8AA6C1;
+  }
+  pre.code.ruby .regex {
+  color:#CA4344;
+  }
+  pre.code.ruby .number {
+  color:#EDDD3D;
+  }
+  pre.code.ruby .attribute {
+  color:#55BBBB;
+  }
+  pre.code.ruby .global {
+  color:#77FFBB;
+  }
+  pre.code.ruby .expr {
+  color:#222277;
+  }
+  pre.code.ruby .escape {
+  color:#1C6A21;
+  }
+:name: system
+:four_oh_four: |
+  <h1>DANG IT!</h1>
+  <p>That is too bad. DANG that smarts bad. I couldn't load your request. Was it malformed?</p>
+  <p>Maybe you should go <a href="/">home</a>.</p>
+
