--- a/soup/test-comment-1.yml
+++ b/soup/test-comment-1.yml
@@ -1,8 +1,8 @@
 test comment--- # Soup attributes
-:commenting_on: test
-:website: ""
-:updated_at: 
 :email: ""
-:name: test-comment-1
 :created_at: 2008-06-03 22:49:44 +01:00
+:updated_at: 2008-06-03 22:49:44 +01:00
 :author: James
+:commenting_on: test
+:name: test-comment-1
+:website: ""
