--- a/soup/test-comment-2.yml
+++ b/soup/test-comment-2.yml
@@ -1,8 +1,8 @@
 I'm not logged in, but I can still comment.--- # Soup attributes
-:commenting_on: test
-:website: ""
-:updated_at: 
 :email: ""
-:name: test-comment-2
 :created_at: 2008-06-03 22:50:32 +01:00
+:updated_at: 2008-06-03 22:50:32 +01:00
 :author: Not Logged In
+:commenting_on: test
+:name: test-comment-2
+:website: ""
