--- a/soup/test-commenting-comment-2.yml
+++ b/soup/test-commenting-comment-2.yml
@@ -1,8 +1,8 @@
 And here's another test comment. Hopefully it won't get marked as spam!--- # Soup attributes
-:commenting_on: test-commenting
-:website: http://interblah.net
-:updated_at: 
 :email: james@lazyatom.com
-:name: test-commenting-comment-2
 :created_at: 2008-08-14 22:16:42 +01:00
+:updated_at: 2008-08-14 22:16:42 +01:00
 :author: James Adam
+:commenting_on: test-commenting
+:name: test-commenting-comment-2
+:website: http://interblah.net
