--- a/soup/test-commenting-comment-3.yml
+++ b/soup/test-commenting-comment-3.yml
@@ -1,13 +1,13 @@
 So I've added some more parameters to the spam checking. Lets see if they get added to the snip.--- # Soup attributes
-:defensio_signature: 422de8149ffgbfmlixxyco
-:commenting_on: test-commenting
-:website: http://interblah.net
-:user_ip: 127.0.0.1
-:updated_at: 
 :email: james@lazyatom.com
-:defensio_message: ""
-:name: test-commenting-comment-3
 :created_at: 2008-08-28 14:43:24 +01:00
 :spam: f
-:author: James Adam
+:updated_at: 2008-08-28 14:43:24 +01:00
 :spamminess: ""
+:author: James Adam
+:commenting_on: test-commenting
+:defensio_signature: 422de8149ffgbfmlixxyco
+:name: test-commenting-comment-3
+:user_ip: 127.0.0.1
+:defensio_message: ""
+:website: http://interblah.net
