--- a/soup/test-commenting-comment-4.yml
+++ b/soup/test-commenting-comment-4.yml
@@ -1,15 +1,15 @@
 So here's another test comment (yes, yet another).
 
 I think the IP might be being set wrongly.--- # Soup attributes
-:defensio_signature: 9b285d2fd9jyckkvzogfss
-:commenting_on: test-commenting
-:website: http://www.reevoo.com
-:user_ip: 86.1.109.154
-:updated_at: 
 :email: jamesadam@reevoo.com
-:defensio_message: ""
-:name: test-commenting-comment-4
 :created_at: 2008-08-28 14:53:27 +01:00
 :spam: f
-:author: James
+:updated_at: 2008-08-28 14:53:27 +01:00
 :spamminess: "0"
+:author: James
+:commenting_on: test-commenting
+:defensio_signature: 9b285d2fd9jyckkvzogfss
+:name: test-commenting-comment-4
+:user_ip: 86.1.109.154
+:defensio_message: ""
+:website: http://www.reevoo.com
