--- a/soup/test-commenting-comment-6.yml
+++ b/soup/test-commenting-comment-6.yml
@@ -1,13 +1,13 @@
 asdfa asdg adghasdf a--- # Soup attributes
-:defensio_signature: 068fb398bdx80uzkxpotau
-:commenting_on: test-commenting
-:website: http://asdfa.asdfoasdfasdfa.com
-:user_ip: 86.1.109.154
-:updated_at: 
+:defensio_status: success
 :email: adfas@adsgasga.com
-:name: test-commenting-comment-6
 :created_at: 2008-08-28 15:28:29 +01:00
 :spam: f
-:author: asdgas
-:defensio_status: success
+:updated_at: 2008-08-28 15:28:29 +01:00
 :spamminess: "0"
+:author: asdgas
+:commenting_on: test-commenting
+:defensio_signature: 068fb398bdx80uzkxpotau
+:name: test-commenting-comment-6
+:user_ip: 86.1.109.154
+:website: http://asdfa.asdfoasdfasdfa.com
