--- a/soup/test-commenting-comment-8.yml
+++ b/soup/test-commenting-comment-8.yml
@@ -1,14 +1,14 @@
 --- # Soup attributes
-:defensio_signature: 
-:commenting_on: test-commenting
-:website: ""
-:user_ip: 72.144.194.112
-:updated_at: 
+:defensio_status: fail
 :email: ""
-:defensio_message: "The following fields are missing but required: comment-author"
-:name: test-commenting-comment-8
 :created_at: 2009-01-11 18:18:09 +00:00
 :spam: 
-:author: ""
-:defensio_status: fail
+:updated_at: 2009-01-11 18:18:09 +00:00
 :spamminess: 
+:author: ""
+:commenting_on: test-commenting
+:defensio_signature: 
+:name: test-commenting-comment-8
+:user_ip: 72.144.194.112
+:defensio_message: "The following fields are missing but required: comment-author"
+:website: ""
