--- a/soup/test.yml
+++ b/soup/test.yml
@@ -39,8 +39,8 @@ And some sweet syntax highlighting!
 
 {code ruby,active-record-ideas,idea-1}
 --- # Soup attributes
-:render_as: Markdown
-:updated_at: 2008-08-19 11:40:48 +01:00
-:name: test
-:created_at: 
+:created_at: 2009-10-16 15:27:53.583636 +01:00
 :some_attribute: attribute content
+:updated_at: 2008-08-19 11:40:48 +01:00
+:render_as: Markdown
+:name: test
