--- a/soup/textile_example.yml
+++ b/soup/textile_example.yml
@@ -9,7 +9,7 @@ what the *hell* are __you__ looking at?
 "Beyotch":http://example.com
 
 --- # Soup attributes
+:created_at: 2009-10-16 15:27:53.588026 +01:00
+:updated_at: 2009-10-16 15:27:53.588026 +01:00
 :render_as: Textile
-:updated_at: 
 :name: textile_example
-:created_at: 
