--- a/soup/url_to.yml
+++ b/soup/url_to.yml
@@ -1,5 +1,5 @@
 UrlTo--- # Soup attributes
-:render_as: Ruby
+:created_at: 2009-10-16 15:27:53.588779 +01:00
 :updated_at: 2008-11-09 17:49:13 +00:00
+:render_as: Ruby
 :name: url_to
-:created_at: 
