--- a/soup/zuul and code etiquette.yml
+++ b/soup/zuul and code etiquette.yml
@@ -26,6 +26,8 @@ Unless there's a great reason to add something to *every* object in a running pr
 --- # Soup attributes
 :name: Zuul and Code Etiquette
 :render_as: Markdown
+:updated_at: 2008-06-03 13:07:43 +00:00
+:created_at: 2008-06-03 13:07:43 +00:00
 :kind: blog
 :zuul: |
   Class.class_eval do
