Changed code snip to refer to enclosing snip.

--- a/soup/active-record-ideas.yml
+++ b/soup/active-record-ideas.yml
@@ -1,4 +1,4 @@
-{code ruby,active-record-ideas,idea-1}--- # Soup attributes
+{code ruby,idea-1}--- # Soup attributes
 :render_as: ""
 :updated_at: 2008-08-19 11:43:00 +01:00
 :name: active-record-ideas
