--- a/soup/gem-this-0-2-1.yml
+++ b/soup/gem-this-0-2-1.yml
@@ -3,7 +3,7 @@ Gem This, now a Gem Command
 
 With the latest release of my vanity gem creation tool, I've made it a tiny bit simpler to turn an existing project into a gem, by valthropomorphosizing {l gem-this} into a gem command. BEHOLD:
 
-{code shell,gem-this-0-2-1,command}
+{code shell,command}
 
 Note the lack of hyphen! That's right, it's as if {l gem-this} was built directly into rubygems itself. Take that!
 
