Remove links for editing (for now)

--- a/soup/system.yml
+++ b/soup/system.yml
@@ -167,8 +167,6 @@ You're in the system snip now. You probably want to {edit_link system,edit} it t
     <link rel="stylesheet" type="text/css" media="screen"  href="/system/css.css" />
     <link rel="stylesheet" type="text/css" media="screen"  href="/system/syntax_styles.css" />
     <link href="/feed.xml" rel="alternate" title="interblah.net - blog" type="application/atom+xml" />
-    <script type="text/javascript" src="http://use.typekit.com/bio7rkl.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
     <div id="content">
@@ -178,10 +176,7 @@ You're in the system snip now. You probably want to {edit_link system,edit} it t
       <div id="controls">
         <strong><a href="/">home</a></strong>, 
         <strong><%= link_to 'index' %></strong>,
-        <%= new_link %> ::
-        <strong>{link_to_current_snip}</strong> &rarr; 
-        {edit_link} | 
-        <a href="/delete?snip_to_delete={current_snip name}" onclick="javascript:if(confirm('Are you REALLY sure?')) { return true; } else { return false; };">Delete</a>
+        <strong>{link_to_current_snip}</strong>
       </div>
       {current_snip}
       <div id="footer">
