--- a/soup/start.yml
+++ b/soup/start.yml
@@ -1,6 +1,4 @@
 <!-- see comments in this snip for explanations of what's going on... -->
-<h6>Welcome; view <a href="/start.raw">the source</a> of this snip (the {link_to start} snip) to see what's going on; find out more at {link_to vanilla-rb}.</h6>
-
 <div id="blog">
 
   <!-- this is a call to a 'dynasnip'. it will load the 3 most recent snips with 'kind': 'blog', and display them in place. -->
@@ -9,11 +7,7 @@
   <!-- this will produce a link to the 'blog' snip -->
   <p>More at the {link_to blog}...</p>
 </div>
-
-<div id="sidebar">
-  <!-- this includes the rendered content of the sidebar -->
-  {sidebar}
-</div>--- # Soup attributes
+--- # Soup attributes
 :created_at: 2009-10-16 15:27:53.578686 +01:00
 :updated_at: 2009-05-07 01:59:17 +01:00
 :render_as: ""
