--- a/soup/sidebar.yml
+++ b/soup/sidebar.yml
@@ -1,18 +1,18 @@
-Hi
---
-
 I'm James Adam, a freelance software developer in the UK. I'm <a href="mailto:james@lazyatom.com?subject=Cool Project">available for hire</a>, and you can find out more about me here, or at [lazyatom.com](http://lazyatom.com).
 
-This site is powered by {l vanilla-rb}, a software experiment of mine. I think it's pretty neat.
+You are reading {link-to-current-snip}. If this isn't what you wanted, you can try the {link_to index}.
 
 Links
 ----
-
 {links}
 
-This is the sidebar. It's actually loaded from the {link_to sidebar} snip, incredibly. There's nothing much here at the moment, but that's more a lack of my own imagination. 
 
-Try viewing <a href="/sidebar.raw">the source</a> of it though.
+More info
+---
+This site is powered by {l vanilla-rb}, a software experiment of mine. I think it's pretty neat.
+
+This is the sidebar. It's actually loaded from the {link_to sidebar} snip, incredibly. Try viewing <a href="/sidebar.raw">the source</a> of it to get an idea of how vanilla works.
+
 --- # Soup attributes
 :render_as: Markdown
 :updated_at: 2009-07-24 09:46:31 +01:00
