Remove broken comments mechanism, use the normal rails one instead.

--- a/soup/rails-biz-conf.yml
+++ b/soup/rails-biz-conf.yml
@@ -18,7 +18,7 @@ Anyway
 
 This isn't a rant against Obie's idea - __the conference sounds like a great idea__, and having launched into that vague sphere myself recently, I would certainly like to pick the brains of the kind of people he's looking to attract. I just don't know if I could ever justify paying $5000 for it, and I wonder if setting the price so high will result in many  smaller business-people finding it difficult to attend.
 
-{comments-for rails-biz-conf}
+{comments}
 
 
 
