--- a/soup/system.yml
+++ b/soup/system.yml
@@ -3,7 +3,7 @@ You're in the system snip now. You probably want to {edit_link system,edit} it t
   body {
     background-color: #999;
     margin: 0;
-    padding: 1em 0;
+    padding: 2em 0 1em 0;
     font-size: 14px;
     width: 68em;
     background-color: #e4e4e4;
@@ -40,6 +40,7 @@ You're in the system snip now. You probably want to {edit_link system,edit} it t
   div#header h2 {
     font-size: 200%;
     margin: 0;
+    padding: 0 32px;
   }
   
   div#header h2 a {
@@ -50,7 +51,7 @@ You're in the system snip now. You probably want to {edit_link system,edit} it t
   
   h1, h2 {
     color: #fff;
-    padding: 0 32px;
+    padding: 0 32px 0 48px;
   }
   
   h1 {
@@ -82,7 +83,7 @@ You're in the system snip now. You probably want to {edit_link system,edit} it t
   }
   
   #content p, #content pre, #content h3, #content h4, #content ul, #content ol {
-    margin-left: 32px;
+    margin-left: 48px;
     margin-right: 2em;
   }
   
@@ -110,6 +111,7 @@ You're in the system snip now. You probably want to {edit_link system,edit} it t
   
   #sidebar h2 {
     clear: both;
+    padding: 0 32px;
   }
 
   #blog h1, 
@@ -125,6 +127,34 @@ You're in the system snip now. You probably want to {edit_link system,edit} it t
   .blog .details {
     background-color: #999;
     display: none;
+  }
+  
+  form.comments { 
+    position: relative;
+    padding-left: 48px;
+  }
+  form.comments label {
+    display: block;
+    width: 30%;
+    position: relative;
+    height: 1.5em;
+  }
+  form.comments input { 
+    position: absolute;
+    right: 1em;
+  }
+  form.comments textarea {
+    float:right;
+    height:6em;
+    position:absolute;
+    right:0pt;
+    top:0pt;
+    width:70%;
+  }
+  form.comments button { }
+  form.comments label.human { 
+    margin-top: 2em;
+    width: 50%;
   }
   
 :created_at: 2009-10-16 15:27:53.579529 +01:00
